[package]
name = "tree-sitter-traversal"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/skmendez/tree-sitter-traversal"
documentation = "https://docs.rs/tree-sitter-traversal/"
authors = ["skmendez"]
readme = "README.md"

description = "Traversal of tree-sitter Trees and any arbitrary tree with a TreeCursor-like interface"

keywords = ["tree-sitter", "traverse", "traversal", "tree"]
categories = ["algorithms", "data-structures", "no-std"]

[dependencies]
tree-sitter = {version=">= 0.22", optional=true}

[dev-dependencies]
tree-sitter-rust = "0.21.0"
tree-sitter-cpp = "0.22.0"

[features]
default = ["tree-sitter"]
